# local-speech-to-text

./: README.md  app.py  pyproject.toml
