[project]
name = "local-speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "parakeet-mlx>=0.5.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
